--- a/today/today/src/main/resources/templates/seite3.html
+++ b/today/today/src/main/resources/templates/seite3.html
@@ -61,7 +61,7 @@
                   <p class="subtitle is-6">Geben Sie ihre Daten ein...</p>
                 </div>
               </div>
-              <form action="/form" method="POST" enctype="multipart/form-data">
+              <form th:action="@{~/form}" method="POST" enctype="multipart/form-data">
                 <div class="content">
                   <div class="field">
                       <label class="label">Datum</label>
